Implementing authentication in Swagger UI

--- a/GGAWebApi/appsettings.json
+++ b/GGAWebApi/appsettings.json
@@ -3,7 +3,7 @@
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "acoh.org.za",
     "TenantId": "common",
-    "ClientId": "XXXX",
+    "ClientId": "a21b19c1-95b0-4b88-b10d-778f1e20987c",
     "CallbackPath": "/signin-oidc",
     "Scopes": "access_as_user"
   },
@@ -20,5 +20,11 @@
   "MicrosoftGraph": {
     "BaseUrl": "https://graph.microsoft.com/v1.0",
     "Scopes": "user.read"
+  },
+  "SwaggerAzureAD": {
+    "AuthorizationUrl": "https://login.microsoftonline.com/e21bec72-b7dc-46b0-8a1e-ca83f796d630/oauth2/v2.0/authorize",
+    "TokenUrl": "https://login.microsoftonline.com/e21bec72-b7dc-46b0-8a1e-ca83f796d630/oauth2/v2.0/token",
+    "Scope": "api://a21b19c1-95b0-4b88-b10d-778f1e20987c/access_as_user",
+    "ClientId": "cd6ab812-5499-47fa-906c-95b7bbcb4b5f"
   }
 }
