--- a/GGAWebApi/appsettings.json
+++ b/GGAWebApi/appsettings.json
@@ -15,7 +15,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=GamesGlobal;User Id=sa;Password=Str0ngPa$$w0rd;Encrypt=false;"
+    "DefaultConnection": "Server=localhost,1433;Database=GamesGlobal;User Id=sa;Password=Str0ngPa$$w0rd;Encrypt=false;TrustServerCertificate=true;"
   },
   "MicrosoftGraph": {
     "BaseUrl": "https://graph.microsoft.com/v1.0",
